# espresso

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readEspresso.py  toEspresso.py
data/: cifar10.json  mnist.json
include/: acts.h  cnn.h  cuacts.h  cucnn.h  cuesp.h  culayers.h  cumem.h  cumlp.h  cunn.h  cupcnn.h  cuptens.h  cutens.h  esp.h  handlers.h  kernels.h  layers.h  nn.h  params.h  scratch.h  tens.h  timez.h  util.cuh  util.h
include/handlers/: cifar.h  mnist.h
include/layers/: bnorm.h  conv.h  cubnorm.h  cuconv.h  cudense.h  cuinput.h  cupconv.h  cupdense.h  cupinput.h  cupool.h  dense.h  input.h  pool.h
include/nn/: cupmlp.h  mlp.h
src/: CMakeLists.txt  cnn.c  cnn.cu  cumem.cu  dscratch.cu  mlp.c  mlp.cu  params.c  pcnn.cu  pmlp.cu  ptens.cu  scratch.c  tens.c  tens.cu  timez.c
src/activations/: psignl.cu  relul.c  signl.c  signl.cu  softmaxl.c
src/handlers/: cifar.c  mnist.c
src/kernels/: bnorm.cu  bnorm.cuh  bp.cu  bp.cuh  copy.cu  copy.cuh  lower.cu  lower.cuh  norm.cu  norm.cuh  pack.cu  pack.cuh  pad.cu  pad.cuh  pgemm.cu  pgemm.cuh  pgemv.cu  pgemv.cuh  pool.cu  pool.cuh  set.cu  set.cuh  sgemm.cu  sgemm.cuh  sgemv.cu  sgemv.cuh  sign.cu  sign.cuh  tch.cu  tch.cuh
src/layers/: bnorml.c  bnorml.cu  convl.c  convl.cu  densel.c  densel.cu  inputl.c  inputl.cu  pconvl.cu  pdensel.cu  pinputl.cu  pooll.c  pooll.cu
test/: CMakeLists.txt  cup_mnist.cu
